--- a/jobBoard/css/styles.css
+++ b/jobBoard/css/styles.css
@@ -2,14 +2,25 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    display:flex;
+    flex-direction: column;
   }
   
   header {
-    background-color: #4CAF50;
+    background-color: #333;
     color: white;
     padding: 10px 0;
+    position:fixed;
+    width:100%;
+
+
   }
-  
+  .container{
+   flex: 1; 
+    display: flex;
+    flex-direction: column;
+  }
+
   .top-bar {
     display: flex;
     justify-content: space-between;
@@ -17,6 +28,11 @@ body {
     padding: 0 20px;
   }
   
+  .logo a{
+text-decoration: none;
+color:white;
+margin-left:0px;
+  }
   .logo h1 {
     margin: 0;
     cursor: pointer;
@@ -24,12 +40,17 @@ body {
   }
   
   .nav-buttons {
+    margin-right:0px;
     display: flex;
   }
   
+  .nav-buttons a{
+    text-decoration: none;
+  }
+  
   .nav-buttons .btn {
-    background-color: white;
-    color: #4CAF50;
+    background-color: #333;
+    color: white;
     border: none;
     padding: 10px 20px;
     margin-left: 10px;
@@ -38,15 +59,17 @@ body {
   }
   
   .nav-buttons .btn:hover {
-    background-color: #45a049;
+    background-color: #3f3f3f;
     color:white;
   }
   
   .main-content {
+    width:auto;
+   margin-top:30px;
     text-align: center;
     padding: 50px;
     background-color: #f4f4f4;
-    height: calc(100vh - 62px); /* Adjusting for header height */
+   height:auto;
   }
   
   .search-container {
@@ -72,52 +95,75 @@ body {
   .search-container .search-btn {
     padding: 10px 20px;
     font-size: 16px;
-    border: 1px solid #4CAF50;
-    background-color: #4CAF50;
+    border: 1px solid #3f3f3f;
+    background-color: #3f3f3f;
     color: white;
     border-radius: 0 4px 4px 0;
     cursor: pointer;
   }
   
   .search-container .search-btn:hover {
-    background-color: #45a049;
+    background-color: #252525;
   }
+ 
+  .recent-jobs-section {
+    padding: 20px;
+    display: grid;
+    flex:1;
+}
+
+.job-grid {
+    display: grid;
+    grid-template-columns: repeat(4,minmax(200px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    margin:auto;
+    
+}
+
+.job-card {
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   
-  /* public/css/styles.css */
+}
+.seeMore button{
+  padding: 10px 20px;
+  font-size: 16px;
+  border: 1px solid #333;
+  background-color: #333;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  margin:auto;
+}
+
+.seeMore button:hover{
+  background-color: #2b2b2b;
+}
 
 /* Footer styles */
-footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
+
+  footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin-top: auto;
 }
 
 .footer-content {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+
 }
 
 .footer-content p {
-  margin: 0;
+  margin: auto;
+
 }
 
-.footer-links {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
 
-.footer-links li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.footer-links li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer-links li a:hover {
-  text-decoration: underline;
-}
