--- a/jobBoard/views/home.ejs
+++ b/jobBoard/views/home.ejs
@@ -5,8 +5,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>job Board</title>
-  <link href="/styles.css" rel="stylesheet">
+  <title>Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link href="/styles.css" rel="stylesheet">
+    <link href="/home.css" rel="stylesheet">
 </head>
 
 <body>
@@ -18,9 +21,16 @@
             <h1>Job Board</h1>
           </a>
         </div>
-        <div class="nav-buttons">
-          <a href="register"><button class="btn">Register</button></a>
-          <a href="login"><button class="btn">Login</button></a>
+  
+       
+            <div class="nav-bar" >
+              <div><i class="bi bi-house"> Home</i></div>
+              <div><i class="bi bi-bell"></i> Notifications</div>
+              <div><i class="bi bi-briefcase"></i> Job Applied</div>
+
+            </div>
+        <div class="profile">
+         <i class="bi bi-person"> Profile</i>
         </div>
       </div>
     </header>
