--- a/jobBoard/views/landingpage.ejs
+++ b/jobBoard/views/landingpage.ejs
@@ -9,6 +9,7 @@
   <link href="/styles.css" rel="stylesheet">
 </head>
 
+<form action="/login" method="po" 
 <body>
   <div class="container">
     <header>
