--- a/jobBoard/views/home.ejs
+++ b/jobBoard/views/home.ejs
@@ -1,117 +1,83 @@
-<!-- views/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    <link href="/styles.css" rel="stylesheet" />
+    <link href="/home.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link href="/styles.css" rel="stylesheet">
-    <link href="/home.css" rel="stylesheet">
-</head>
-
-<body>
-  <div class="container">
-    <header>
-      <div class="top-bar">
-        <div class="logo">
-          <a href="">
-            <h1>Job Board</h1>
-          </a>
-        </div>
-  
-       
-            <div class="nav-bar" >
-              <div><i class="bi bi-house"> Home</i></div>
-              <div><i class="bi bi-bell"></i> Notifications</div>
-              <div><i class="bi bi-briefcase"></i> Job Applied</div>
-
+  <body>
+    <div class="container">
+      <header>
+        <div class="top-bar">
+          <div class="logo">
+            <a href="">
+              <h1>Job Board</h1>
+            </a>
+          </div>
+          <div class="nav-bar">
+            <div><i id="home" class="bi bi-house"></i></div>
+            <div>
+              <i onclick="redirectMessage()" class="bi bi-chat-left-text"></i>
             </div>
-        <div class="profile">
-         <i class="bi bi-person"> Profile</i>
+            <div>
+              <i onclick="redirectNotifications()" class="bi bi-bell"></i>
+            </div>
+            <div>
+              <i onclick="redirectJobApplied()" class="bi bi-briefcase"></i>
+            </div>
+            <div><i onclick="redirectSearch()" class="bi bi-search"></i></div>
+          </div>
+          <div class="profile">
+            <div id="profile-button"><i class="bi bi-person"></i></div>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <section class="main-content">
-      <div class="search-container">
-        <h2>Find Your Dream Job</h2>
-        <input type="text" placeholder="Search for jobs...">
-        <button class="search-btn">Search</button>
-      </div>
-
-      <div class="recent-jobs-section">
-        <h2>Recent Jobs</h2>
-
-        <div class="job-grid">
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-
-          </div>
-
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-
-          </div>
-
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-
-          </div>
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-
-          </div>
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-          </div>
-
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-          </div>
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-
-          </div>
-          <div class="job-card">
-            <h3>web development </h3>
-            <p>codsoft<br>
-              kolkata,west bengal </p>
-
-          </div>
-          
+      <section class="main-content">
+        <div class="search-container">
+          <h2>Find Your Dream Job</h2>
+          <input type="text" placeholder="Search for jobs..." />
+          <button class="search-btn">Search</button>
         </div>
-        <div class="seeMore">
-          <button type="submit">See More</button>
+        <div class="recent-jobs-section">
+          <h2>Recent Jobs</h2>
+          <div class="job-grid">
+            <% function generateRandomIndex(arr) { return
+            Math.floor(Math.random()*arr.length); } function randomJob(jobdata)
+            { randomjobs=[]; const randomIndex=new Set();
+            while(randomIndex.size<8){
+            randomIndex.add(generateRandomIndex(jobdata)) }
+            randomIndex.forEach(index=> { randomjobs.push(jobdata[index]) });
+            return randomjobs; } %> <% const randomJobs=randomJob(jobData) %> <%
+            randomJobs.forEach(function(job) { %>
+            <div class="job-card">
+              <h3><%= job.title %></h3>
+              <p>
+                <%= job.company %><br />
+                <%= job.location %>
+              </p>
+            </div>
+            <% }); %>
+          </div>
+          <div class="seeMore">
+            <button type="submit">See More</button>
+          </div>
         </div>
-    </section>
-
-  </div>
-
-
-  <footer>
-    <div class="footer-content">
-      <p>&copy; 2024 Job Board</p>
-
+      </section>
     </div>
-  </footer>
-</body>
 
-
+    <footer>
+      <div class="footer-content">
+        <p>&copy; 2024 Job Board</p>
+      </div>
+    </footer>
+    <script src="/profileoption.js"></script>
+  </body>
 </html>
