--- a/jobBoard/views/loginpage.ejs
+++ b/jobBoard/views/loginpage.ejs
@@ -14,7 +14,7 @@
         
         <div class="login-section">
             <h2>Login</h2>
-            <form action="/login" method="POST" class="login-form">
+            <form action="/login" method="post" class="login-form">
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
