--- a/jobBoard/frontend/src/css/login.css
+++ b/jobBoard/frontend/src/css/login.css
@@ -1,56 +1,12 @@
-/* styles.css */
-
-/* Basic reset and setup */
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-}
-
-.top-bar a{
-    text-decoration: none;
-    color:white;
-}
-
-.top-bar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height:fit-content;
-    width: 100%; 
-    z-index: 1000; 
-    cursor:pointer
-}
-
-.nav-buttons a {
-    color: #fff;
-    margin-left: 10px;
-    text-decoration: none;
-}
-
 .container {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Center the login section vertically */
-    align-items: center; /* Center the login section horizontally */
-    padding-top: 60px; /* Add padding to prevent overlap with the fixed header */
+    padding-top: 60px; 
 }
 
 .login-section {
-    width: 300px; /* Set a fixed width for the login form */
+    width: 300px; 
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -71,6 +27,9 @@ body {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
+    border:1px solid rgb(173, 171, 171);
+    outline:none;
+    border-radius: 10px;
 }
 
 .login-form button {
@@ -100,26 +59,3 @@ body {
 .forgot-password a:hover {
     text-decoration: underline;
 }
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-top: auto;
-    width:auto;
-  
-}
-
-.footer-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-}
-
-.footer-content p {
-  margin: 0;
-}
-
-
