--- a/jobBoard/frontend/src/css/styles.css
+++ b/jobBoard/frontend/src/css/styles.css
@@ -1,55 +1,38 @@
 /* public/css/styles.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
+*{
+  .roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+}
 body {
     margin: 0;
     font-family: Arial, sans-serif;
     display:flex;
+    background-color: rgb(241, 241, 241);
     flex-direction: column;
   }
   
-  header {
-    background-color: #333;
-    color: white;
-    padding: 10px 0;
-    position:fixed;
-    width:100%;
-
-
-  }
   .container{
    flex: 1; 
     display: flex;
     flex-direction: column;
   }
 
+  .Notification{
+    box-shadow:  0px 0px 2px 3px rgb(145, 135, 135);
+  }
   .top-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    padding-right: 40px;
+    justify-content:space-between;
   }
-  
-  .logo a{
-text-decoration: none;
-color:white;
-margin-left:0px;
-  }
-  .logo h1 {
-    margin: 0;
-    cursor: pointer;
 
-  }
-  
-  .nav-buttons {
-    margin-right:0px;
-    display: flex;
-  }
-  
-  .nav-buttons a{
-    text-decoration: none;
-  }
-  
-  .nav-buttons .btn {
+
+   .nav-buttons .btn {
     background-color: #333;
     color: white;
     border: none;
@@ -64,43 +47,17 @@ margin-left:0px;
     color:white;
   }
   
-  .main-content {
-    width:auto;
-   margin-top:30px;
-    text-align: center;
-    padding: 50px;
-    background-color: #f4f4f4;
-   height:auto;
-  }
+ 
   
-  .search-container {
-    max-width: 600px;
-    margin: 0 auto;
-    
-  }
-  
-  .search-container h2 {
-    margin-bottom: 20px;
-  }
-  
-  .search-container input {
-    width: 70%;
-    padding: 10px;
-    font-size: 16px;
-    margin-right: -5px;
+  .search-container input { 
     border: 1px solid #ccc;
     border-radius: 4px 0 0 4px;
-    outline:none;
-  }
+      }
   
   .search-container .search-btn {
-    padding: 10px 20px;
-    font-size: 16px;
     border: 1px solid #3f3f3f;
-    background-color: #3f3f3f;
-    color: white;
     border-radius: 0 4px 4px 0;
-    cursor: pointer;
+   
   }
   
   .search-container .search-btn:hover {
@@ -143,25 +100,4 @@ margin-left:0px;
 .seeMore button:hover{
   background-color: #2b2b2b;
 }
-
-/* Footer styles */
-
-  footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-top: auto;
-}
-
-.footer-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer-content p {
-  margin: auto;
-}
-
 
